Cursor stuck in resize mode #67472

Closed
opened 2019-07-22 22:22:30 +02:00 by Pawel Cislo · 7 comments

System Information
Operating system: Manjaro Linux KDE
Graphics card: GeForce GTX 750 Ti

Blender Version
Broken: 2.80, 02c5c091df, master, 2019-07-22

Short description of error
Cursor stuck in resize mode when camera render region is on

Exact steps for others to reproduce the error
Select Render Region in output settings. In camera view, with camera selected, hover cursor over camera frame - cursor switches to resize icon. When you then move around the viewport or select objects, the resize icon doesn't change back to normal cursor. You need to move the cursor to another panel/editor to get it back.

**System Information** Operating system: Manjaro Linux KDE Graphics card: GeForce GTX 750 Ti **Blender Version** Broken: 2.80, 02c5c091dfd6, master, 2019-07-22 **Short description of error** Cursor stuck in resize mode when camera render region is on **Exact steps for others to reproduce the error** Select Render Region in output settings. In camera view, with camera selected, hover cursor over camera frame - cursor switches to resize icon. When you then move around the viewport or select objects, the resize icon doesn't change back to normal cursor. You need to move the cursor to another panel/editor to get it back.
Author

Added subscriber: @PawelCislo

Added subscriber: @PawelCislo

Added subscriber: @GavinScott

Added subscriber: @GavinScott

It behaves like that here on Windows as well.

Also, the ability to drag the render region borders outside the camera frame is/has kinda screwy behavior.

And if you set a render region, F12, then close the new render window, it appears to then be drawing your active render region as well as another render region box around the full camera rectangle.

None of this slightly odd behavior seems to cause any serious issues though.

It behaves like that here on Windows as well. Also, the ability to drag the render region borders outside the camera frame is/has kinda screwy behavior. And if you set a render region, F12, then close the new render window, it appears to then be drawing your active render region as well as another render region box around the full camera rectangle. None of this slightly odd behavior seems to cause any serious issues though.
William Reynish was assigned by Sebastian Parborg 2019-07-24 18:08:53 +02:00

Added subscribers: @WilliamReynish, @brecht

Added subscribers: @WilliamReynish, @brecht
William Reynish was unassigned by Brecht Van Lommel 2019-07-24 18:11:39 +02:00
Campbell Barton was assigned by Brecht Van Lommel 2019-07-24 18:11:39 +02:00

@WilliamReynish is the UI designer, gizmo implementation issues like this are for Campbell.

@WilliamReynish is the UI designer, gizmo implementation issues like this are for Campbell.

This issue was referenced by 76dfbee423

This issue was referenced by 76dfbee423e8ba886fd72bca7ae9e6f220c59844

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67472
No description provided.