Fix T67472: Gizmo overlap causes cursor to get stuck